--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "bootstrap": "^5.3.5",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
