--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
@@ -50,5 +51,6 @@
     "@types/react-router-dom": "^5.3.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
