--- a/back/back/package.json
+++ b/back/back/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
+    "graphql-scalars": "^1.24.2",
     "mysql2": "^3.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
