--- a/front/package.json
+++ b/front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^19.1.2",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
+    "graphql": "^16.11.0",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
