--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -51,6 +52,5 @@
     "@types/react-router-dom": "^5.3.3",
     "css-loader": "^7.1.2",
     "style-loader": "^4.0.0"
-  },
-  "proxy": "http://localhost:4000"
+  }
 }
