--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.2",
     "@types/node": "^22.15.29"
   }
 }
