--- a/back/back/package.json
+++ b/back/back/package.json
@@ -46,6 +46,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "serve-static": "^2.2.0",
     "stripe": "^18.2.1",
     "typeorm": "^0.3.24"
   },
