--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,8 @@
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
