--- a/back/back/package.json
+++ b/back/back/package.json
@@ -29,7 +29,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.3",
     "@nestjs/platform-socket.io": "^11.1.2",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.2",
@@ -41,6 +41,7 @@
     "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
