added the ai part of sorting the modals

--- a/back/back/package.json
+++ b/back/back/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.1",
+    "@faker-js/faker": "^9.8.0",
     "@nestjs/apollo": "^13.1.0",
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -47,8 +49,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "serve-static": "^2.2.0",
-    "stripe": "^18.2.1",
-    "typeorm": "^0.3.24"
+    "stripe": "^18.2.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -76,7 +77,8 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
+    "typeorm": "^0.3.24",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
