fixed kanban auth and conversation creation when application is accepted

--- a/back/back/package.json
+++ b/back/back/package.json
@@ -43,9 +43,9 @@
     "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
-    "jsonwebtoken": "^9.0.2",
     "graphql-upload": "^13.0.0",
     "graphql-upload-ts": "^2.1.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "passport": "^0.7.0",
@@ -53,11 +53,11 @@
     "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "serve-static": "^2.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "typeorm": "^0.3.24",
-    "serve-static": "^2.2.0",
-    "stripe": "^18.2.1"
+    "stripe": "^18.2.1",
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
