--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
     "graphql-upload": "^17.0.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
@@ -27,9 +28,9 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "rxjs": "^7.8.2",
     "socket.io-client": "^4.8.1",
-    "react-toastify": "^11.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-toastify": "^4.0.2",
     "css-loader": "^7.1.2",
